# headless

./: CMakeLists.txt  README.md  format.sh  header.cpp  header.hpp  main.cpp
tests/: enum.hpp  function.cpp  header1.hpp  using_directive.hpp
tests/extra_internal_header/: test.cpp  test.out
tests/extra_internal_header/internal/: internal.hpp
tests/extra_internal_header/internal/extra/: internal.hpp
tests/function/: header2.hpp  test.out
tests/function_indirect/: header1.hpp  header_includes_other.hpp  test.cpp  test.out
tests/internal_header/: external.hpp  test.cpp
tests/internal_header/internal/: internal.hpp
tests/method_decl/: class.hpp  proxy.hpp  test.cpp  test.out
tests/var_enum/: test.cpp
tests/var_reference/: test.cpp  totally_unused.hpp  used.hpp
tests/var_using/: test.cpp  test.out
